--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta
       name="description"
       content="Надпреварвай се с приятелите ти!"
     />
