feat: added profile info, improved loading home screen loading time, shadcn

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>Poop - следи изакванията си</title>
   </head>
-  <body>
+  <body style="padding: 20px; padding-bottom: 0px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
