--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       name="description"
       content="Надпреварвай се с приятелите ти!"
     />
+    <meta name="image" content="%PUBLIC_URL%/meta-image.png">        
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
